--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
+cloudpickle==3.1.0
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
@@ -23,20 +24,26 @@ decorator==5.1.1
 defusedxml==0.7.1
 exceptiongroup==1.2.2
 executing==2.1.0
+Farama-Notifications==0.0.4
 fastjsonschema==2.20.0
+filelock==3.16.1
 flatbuffers==24.3.25
 fonttools==4.54.1
 fqdn==1.5.1
+fsspec==2024.9.0
 gast==0.4.0
 google-auth==2.35.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.66.1
+gymnasium==1.0.0
 h11==0.14.0
 h5py==3.11.0
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+idx2numpy==1.2.3
+imageio==2.36.0
 ipykernel==6.29.5
 ipython==8.28.0
 ipywidgets==8.1.5
@@ -62,6 +69,7 @@ jupyterlab_widgets==3.0.13
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.7
+lazy_loader==0.4
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -71,11 +79,13 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
 ml-dtypes==0.3.2
+mpmath==1.3.0
 namex==0.0.8
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.1
 notebook==7.2.2
 notebook_shim==0.2.4
 numpy==1.26.4
@@ -84,10 +94,12 @@ opt-einsum==3.3.0
 optree==0.12.1
 overrides==7.7.0
 packaging==24.1
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pillow==10.4.0
 platformdirs==4.3.6
+plotly==5.24.1
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 protobuf==3.19.6
@@ -100,6 +112,7 @@ Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+pytz==2024.2
 pywin32==308
 pywinpty==2.0.13
 PyYAML==6.0.2
@@ -112,11 +125,15 @@ rfc3986-validator==0.1.1
 rich==13.8.1
 rpds-py==0.20.0
 rsa==4.9
+scikit-image==0.24.0
+scipy==1.14.1
 Send2Trash==1.8.3
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+sympy==1.13.3
+tenacity==9.0.0
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -127,12 +144,15 @@ tensorflow-intel==2.16.2
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 terminado==0.18.1
+tifffile==2024.9.20
 tinycss2==1.3.0
 tomli==2.0.2
+torch==2.4.1
 tornado==6.4.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
+tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
 wcwidth==0.2.13
