--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+pygame==2.6.1
 Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
